Update perf wiki page with CI job output
Change-Id: I730afba407ac1893be72ceb33a2a4a44d4bdc249